# cgpm

./: .gitignore  .travis.yml  Dockerfile  HACKING  MANIFEST.in  README.md  VERSION  check.sh  dummy  pyproject.toml  pythenv.sh  requirements.txt  setup.py
cgpm/: __init__.py  cgpm.py
conda/: conda_upload.sh  meta.yaml  meta.yml  upload.sh
docker/: README  ubuntu1404  ubuntu1404-int  ubuntu1604  ubuntu1604-int
gpmcc/: Engine.py  TODO  cc_dim.py  cc_dim_uc.py  cc_state.py  cc_view.py  dim.py  dim_uc.py  engine.py  example.py  particle_dim.py  state.py  view.py
profile/: 1499288477  1499288514  1499288579  1499288622  1499288802  1499288980  1499289129  1499289404  1499289555  1499289585  1499289666  1499289674  1499289729  1499290027  1499290071  1499290212  1499290400  1499290491  1499290541  1499290666  transition.py
src/: __init__.py  cgpm.py  dim.py  engine.py  gpm.py  state.py  view.py
tests/: MWE_view_incorporate_missing_value.py  conftest.py  disabled_simulate_mixture.py  disabled_test_animals.py  disabled_test_engine_dimensions.py  disabled_test_kl.py  disabled_test_linreg.py  disabled_test_loomcat.py  disabled_test_lovecat.py  disabled_test_render_utils.py  disabled_test_simulate_univariate.py  disabled_test_two_views.py  disabled_test_uncorrelated_simulate.py  disabled_test_vscgpm.py  disabled_test_vsinline.py  disabled_test_vsinline_determinism.py  hacks.py  markers.py  prototype_logpdf_multirow_view.py  prototype_relevance_score.py  stochastic.py  test_add_state.py  test_bayes_sets.py  test_bayes_sets_experiments.py  test_bernoulli.py  test_cmi.py  (+90 more)
(+296 files in other folders)
